app-deployment/customer-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service-deployment
  namespace: nuvolar
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: customer-service
  template:
    metadata:
      labels:
        app: customer-service
    spec:
      containers:
      - name: customer-service
        image: nuvolar/customer-service:latest  
        ports:
        - containerPort: 8080
