app-deployment/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
spec:
  rules:
  - host: DOMAIN.com  
    http:
      paths:
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: api-gateway-service
            port:
              number: 80
